# bdwgcvsimmix-bench

./: Cargo.toml  wrapper.h
.github/workflows/: bench.yaml
bdwgc/bdwgc 2 threads/base/: estimates.json  raw.csv  tukey.json
bdwgc/bdwgc 2 threads/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
bdwgc/bdwgc 2 threads/report/: index.html
bdwgc/bdwgc 8 threads/base/: benchmark.json  estimates.json  raw.csv  tukey.json
bdwgc/bdwgc 8 threads/new/: sample.json
bdwgc/bdwgc 8 threads/report/: index.html
bdwgc/gcb/base/: tukey.json
bdwgc/gcb/new/: benchmark.json  estimates.json  raw.csv  sample.json
bdwgc/gcb/report/: index.html
bdwgc/gcbench/base/: estimates.json  tukey.json
bdwgc/gcbench/new/: benchmark.json  raw.csv  sample.json
bdwgc/gcbench/report/: index.html
bdwgc/report/: index.html
benches/: gcbench-bdwgc.rs  gcbench-plimmix.rs
gc/1/report/: index.html
gc/2/report/: index.html
gc/bdw/1/base/: raw.csv  sample.json
gc/bdw/report/: index.html
gc/immix/report/: index.html
gc/report/: index.html
plimmixgc/multi-thread (2) gc stress benchmark small objects/base/: estimates.json  raw.csv  sample.json  tukey.json
plimmixgc/multi-thread (2) gc stress benchmark small objects/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
plimmixgc/multi-thread (2) gc stress benchmark small objects/report/: index.html
plimmixgc/multi-thread (8) gc stress benchmark small objects/base/: benchmark.json  estimates.json
plimmixgc/report/: index.html
report/: index.html
src/: lib.rs  main.rs
(+38 files in other folders)
